Changed user facade get users by roles method to be more readable and removed unused method